Resolved radio button check not centered on HiDPI

--- a/src/scss/ui/forms/_form-check.scss
+++ b/src/scss/ui/forms/_form-check.scss
@@ -63,3 +63,8 @@ Form switch
     background-size: 1.5rem;
   }
 }
+
+/*Correction of Form-check position*/
+.form-check-input:checked{
+  border: none;
+}
